# capstone-project

./: .dockerignore  .env.production  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  SETUP_GUIDE.md  docker-compose.yml  nginx.conf  pyproject.toml  ruff.toml
capstone/backend/: app.py  config.py
capstone/backend/api/router/: chatbot.py  dashboard.py  document.py
capstone/backend/api/utils/: convert.py  dashboard_query.py
capstone/backend/database/: connection.py
capstone/backend/llms/: agent.py  core.py
capstone/backend/logs/: logging_config.py
capstone/frontend/: package-lock.json  vite.config.js
capstone/frontend/src/api/: api_client.js
capstone/frontend/src/components/: Chatbot.jsx
capstone/frontend/src/dashboard_page/: dashboard.jsx
capstone/frontend/src/dashboard_page/components/button/: Upload.jsx
capstone/frontend/src/manage_page/: manage.jsx
capstone/frontend/src/show_page/components/: Chatbot.jsx
database/vector_history/: chroma.sqlite3
scripts/: init-ollama.sh
tests/: conftest.py  test_api.py
